--- a/.github/workflows/编译通用镜像.yml
+++ b/.github/workflows/编译通用镜像.yml
@@ -54,26 +54,25 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         sudo swapoff -a || true
-        sudo rm -rf /swapfile /etc/apt/sources.list.d/* 2>/dev/null
+        # 清理多余文件，腾出磁盘空间
+        docker rmi `docker images -q`
+        sudo -E apt-get remove -y --purge azure-cli ghc zulu* llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
+        sudo -E apt-get -y autoremove --purge
+        sudo rm -rf /swapfile /etc/apt/sources.list.d/* /etc/mysql /etc/php /usr/share/dotnet /usr/local/lib/android /opt/ghc 2>/dev/null
+        echo "--------------------------硬盘信息--------------------------"
+        echo "硬盘详情："
+        df -Th
         sudo -E apt-get -y update
         # sudo -E apt-get -y install $(curl -fsSL git.io/depends-ubuntu-2004)
         # sudo -E apt-get -y install $(curl -fsSL https://is.gd/depends_ubuntu_2204)
         sudo -E apt-get install -y build-essential clang flex bison g++ gawk \
         gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev \
         python3-distutils rsync subversion unzip zlib1g-dev file wget
-        sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
         echo "COMPILE_STARTINGTIME=$(date +"%Y-%m-%d-%H-%M")" >> $GITHUB_OUTPUT
-        # 清理多余文件，腾出磁盘空间
-        docker rmi `docker images -q`
-        echo "--------------------------硬盘信息--------------------------"
-        echo "硬盘详情："
-        df -Th
-        sudo -E apt-get remove -y --purge azure-cli ghc zulu* llvm* firefox google* dotnet* powershell mysql* php* mssql-tools msodbcsql17 android*
-        sudo rm -rf /etc/mysql /etc/php /usr/share/dotnet /usr/local/lib/android /opt/ghc 2>/dev/null
         echo "--------------------------硬盘信息--------------------------"
         echo "硬盘详情："
         df -Th
